refactor: CourseApplicationServiceTest 픽스처 적용 및 테스트 코드 리팩터링